[gd_scene load_steps=7 format=3 uid="uid://cbjn5ft671v0t"]

[ext_resource type="Script" path="res://player/player.gd" id="1"]
[ext_resource type="PackedScene" path="res://player/body.tscn" id="2"]
[ext_resource type="PackedScene" path="res://player/dir_checks.tscn" id="3"]
[ext_resource type="PackedScene" path="res://player/hud.tscn" id="4"]
[ext_resource type="AudioStream" uid="uid://bf4uoh0a877l7" path="res://sound/step_ultralow.wav" id="5"]
[ext_resource type="AudioStream" uid="uid://caiejymssra8d" path="res://sound/hurt.wav" id="6"]

[node name="Player" type="Node3D"]
script = ExtResource("1")

[node name="StepTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="Step" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5")
volume_db = -29.0

[node name="Hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6")
volume_db = -25.0
pitch_scale = 0.5

[node name="Land" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5")
volume_db = -20.0
pitch_scale = 1.5

[node name="Body" parent="." instance=ExtResource("2")]

[node name="DirChecks" parent="." instance=ExtResource("3")]
TargetPath = NodePath("../Body")

[node name="HUD" parent="." instance=ExtResource("4")]
layout_mode = 3
anchors_preset = 15

[node name="MessagePanel" parent="HUD" index="0"]
layout_mode = 0

[node name="Message" parent="HUD/MessagePanel" index="0"]
layout_mode = 0

[node name="FpsPanel" parent="HUD" index="1"]
layout_mode = 0

[node name="Fps" parent="HUD/FpsPanel" index="0"]
layout_mode = 0

[node name="CenterContainer" parent="HUD" index="2"]
layout_mode = 0

[node name="Crosshair" parent="HUD/CenterContainer" index="0"]
layout_mode = 2
expand_mode = 1

[node name="Transition" parent="HUD" index="4"]
anchors_preset = 0

[node name="ColorRect" parent="HUD/Transition" index="0"]
layout_mode = 0

[node name="TextureRect" parent="HUD/Transition" index="1"]
layout_mode = 0
expand_mode = 1

[connection signal="crouch" from="." to="Body" method="_on_Player_crouch"]
[connection signal="direction_changed" from="." to="Body" method="_on_Player_direction_changed"]
[connection signal="direction_changed" from="." to="DirChecks" method="_on_Player_direction_changed"]
[connection signal="jump" from="." to="Body" method="_on_Player_jump"]
[connection signal="look_object" from="." to="HUD" method="_on_Player_look_object"]
[connection signal="scroll" from="." to="HUD" method="_on_Player_scroll"]
[connection signal="tree_entered" from="." to="HUD" method="_on_Player_tree_entered"]
[connection signal="uncrouch" from="." to="Body" method="_on_Player_uncrouch"]
[connection signal="fallen" from="Body" to="." method="_on_Body_fallen"]
[connection signal="landed" from="Body" to="." method="_on_Body_landed"]
[connection signal="send_height" from="Body" to="DirChecks" method="_on_Body_send_height"]
[connection signal="look_object" from="Body/Head" to="." method="_on_Head_look_object"]

[editable path="Body"]
[editable path="DirChecks"]
[editable path="HUD"]
